<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:summary="@string/settings_summary"
    android:title="@string/settings">


        <SwitchPreference
            android:defaultValue="true"
            android:key="logging_toggle"
            android:title="Background Logging"
            />

    <EditTextPreference
        android:key="logging_freq"
        android:inputType="number"
        android:title="Logging Frequency"
        android:summary="Minutes in-between logs" />


    <CheckBoxPreference
        android:defaultValue="false"
        android:title="Force WiFi On"
        android:key="force_wifi_on" />

    <PreferenceScreen
        android:key="pref_server"
        android:title="@string/pref_group_server">

        <EditTextPreference
            android:id="@+id/pref_server_ip"
            android:inputType="number"
            android:digits="0123456789."
            android:key="pref_server_ip"
            android:summary="@string/pref_server_summary"
            android:title="@string/pref_server_ip" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_server_save_logs"
            android:title="@string/pref_server_save_logs"
            android:summary="@string/pref_server_logs_summary"/>

    </PreferenceScreen>


</PreferenceScreen>
